...
    companion object {
        const val LENS_FACING_KEY = "lens_facing"
        const val IS_FLIPPED_KEY = "is_flipped"
        const val AWB_MODE_KEY = "awb_mode"

        private val allKnownWbPresets = listOf(
            WbPreset("Auto", CameraMetadata.CONTROL_AWB_MODE_AUTO),
            WbPreset("Incandescent", CameraMetadata.CONTROL_AWB_MODE_INCANDESCENT),
            WbPreset("Fluorescent", CameraMetadata.CONTROL_AWB_MODE_FLUORESCENT),
            WbPreset("Warm Fluorescent", CameraMetadata.CONTROL_AWB_MODE_WARM_FLUORESCENT),
            WbPreset("Daylight", CameraMetadata.CONTROL_AWB_MODE_DAYLIGHT),
            WbPreset("Cloudy Daylight", CameraMetadata.CONTROL_AWB_MODE_CLOUDY_DAYLIGHT),
            WbPreset("Twilight", CameraMetadata.CONTROL_AWB_MODE_TWILIGHT),
            WbPreset("Shade", CameraMetadata.CONTROL_AWB_MODE_SHADE)
        )
    }

    private val _displayedError = MutableStateFlow<UserError?>(null)
...
